# ez-workspaces

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  ez_todo  openspec_files.txt
.claude/skills/ez-browse/: SKILL.md
.claude/skills/ez-plugin/: SKILL.md
.claude/skills/ez-session/: SKILL.md
.claude/skills/fzf-binds/: SKILL.md
docs/: architecture.md  design.md  plugin-guide.md  skills.md  user-guide.md
examples/: config.toml
openspec/changes/cursor-trust-plugins/: design.md  proposal.md  tasks.md
openspec/changes/integrations-and-session-ops/: design.md  proposal.md  tasks.md
openspec/changes/kv-env-plugin/: design.md  proposal.md  tasks.md
openspec/changes/pr-status-auto-detect/: design.md  proposal.md  (+1 more)
plugins/cursor-mcp-approvals/: cursor-mcp-approvals-plugin  manifest.toml
plugins/cursor-mcp-auth/: cursor-mcp-auth-plugin  manifest.toml
plugins/cursor-trusted-workspace/: cursor-trusted-workspace-plugin  manifest.toml
plugins/git-worktree/: git-worktree-plugin  manifest.toml
plugins/kv/: kv-plugin  manifest.toml
plugins/tmux/: manifest.toml  tmux-plugin
raycast/: README.md  ez-repos.sh  ez-sessions.sh
raycast/ez-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
src/: cli.rs  error.rs  lib.rs  main.rs  paths.rs
src/browser/: mod.rs  preview.rs  selector.rs
src/config/: mod.rs  model.rs
src/plugin/: bundled.rs  mod.rs  model.rs  protocol.rs  runner.rs
src/repo/: mod.rs  model.rs  store.rs
src/session/: current.rs  cursor.rs  from_dirty.rs  mod.rs  model.rs  name_builder.rs  store.rs  tree.rs
(+87 files in other folders)
