[package]
name = "ez-workspaces"
version = "0.1.0"
edition = "2021"
description = "Workspace and session manager for git worktrees"
license = "AGPL-3.0"

[[bin]]
name = "ez"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
which = "7"
colored = "3"
regex = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
md5 = "0.7"
console = "0.16.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
